--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run build-watch & npm run start-server ",
     "build-watch": "webpack -w",
-    "start-server": "nodemon --watch server -e js,html server/index.js"
+    "start-server": "nodemon --watch server -e js,html server/index.js",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
@@ -23,6 +25,7 @@
     "react-redux": "^v8.0.1",
     "react-router-dom": "^6.3.0",
     "sequelize": "^6.20.0",
+    "volleyball": "^1.5.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
